Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,4 +24,4 @@ steps:
     deployToSlotOrASE: true
     ResourceGroupName: 'Test'
     SlotName: 'production'
-    packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
+    packageForLinux: '$(build.artifactstagingdirectory)/**/*.zip'
