Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,6 @@ steps:
   displayName: 'dotnet build $(buildConfiguration)'
 - task: AzureRmWebAppDeployment@4
   inputs:
-    arguments: '--output $(build.artifactstagingdirectory)'
     ConnectionType: 'AzureRM'
     azureSubscription: '免费试用 (7a83502b-3469-4b94-8b95-ce28711359d5)'
     appType: 'webAppLinux'
@@ -25,4 +24,5 @@ steps:
     deployToSlotOrASE: true
     ResourceGroupName: 'Test'
     SlotName: 'production'
-    packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
+    packageForLinux: '"$(build.artifactStagingDirectory)\WebApp.zip"'
+- task: PublishBuildArtifacts@1
