--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,5 +24,5 @@ steps:
     deployToSlotOrASE: true
     ResourceGroupName: 'Test'
     SlotName: 'production'
-    packageForLinux: '"$(build.artifactStagingDirectory)\WebApp.zip"'
+    packageForLinux: '$(build.artifactStagingDirectory)/WebApp.zip'
 - task: PublishBuildArtifacts@1
